<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="18dp"
    android:paddingVertical="16dp"
    android:textAlignment="center"
    tools:context=".AuthActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnBackground"
        android:drawableLeft="@drawable/ic_translate_24"
        android:text="Español"
        android:textColor="?attr/colorSurface"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorSurface"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="375dp"
            app:cardCornerRadius="32dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logofilmosispremium" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="¡Bienvenido!"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:backgroundTint="?attr/colorSurface"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:text="CONTINUAR CON GOOGLE"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="24dp"
            app:iconGravity="start"
            app:strokeColor="?attr/colorOnBackground"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:text="CREAR CUENTA"
            app:cornerRadius="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿Ya tienes una cuenta?"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondary"
            android:text="ACCEDER"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="24dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="Al iniciar sesión o registrarse, acepta nuestros Términos de servicio y Política de Privacidad"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>