<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/signUp_usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Nombre de usuario"
            android:inputType="text"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/signUp_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/signUp_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Datos personales"
                android:textColor="?attr/colorOnBackground"
                android:padding="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <EditText
            android:id="@+id/signUp_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="text"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/signUp_surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Apellidos"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/signUp_bornDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:ems="10"
            android:hint="Fecha de nacimiento"
            android:focusable="false"
            android:textColor="?attr/colorOnBackground"
            android:textCursorDrawable="@null" />


        <Button
            android:id="@+id/signUp_signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="CREAR CUENTA" />

    </LinearLayout>

    <Button
        android:id="@+id/signUp_returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableLeft="@drawable/ic_arrow_back_24"
        android:drawableTint="?attr/colorOnBackground"
        android:text="VOLVER"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorOnBackground"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>